syntax = "proto3";
package POGOProtos.Data;

import "POGOProtos/Data/PokemonDisplay.proto";
import "POGOProtos/Enums/PokemonId.proto";

message NpcPokemon {
	.POGOProtos.Enums.PokemonId pokemon_type = 1;
	.POGOProtos.Data.PokemonDisplay pokemon_display = 2;
}
