syntax = "proto3";
package POGOProtos.Settings.Master.Pokemon;

import public "POGOProtos.Enums.proto";
import public "POGOProtos.Inventory.Item.proto";

message EvolutionBranch {
	.POGOProtos.Enums.PokemonId evolution = 1;
	.POGOProtos.Inventory.Item.ItemId evolution_item_requirement = 2;
	int32 candy_cost = 3;
	float km_buddy_distance_requirement = 4;
	.POGOProtos.Enums.Form form = 5;
}

message EncounterAttributes {
	float base_capture_rate = 1;
	float base_flee_rate = 2;
	float collision_radius_m = 3;
	float collision_height_m = 4;
	float collision_head_radius_m = 5;
	.POGOProtos.Enums.PokemonMovementType movement_type = 6;
	float movement_timer_s = 7;
	float jump_time_s = 8;
	float attack_timer_s = 9;
	int32 bonus_candy_capture_reward = 10;
	int32 bonus_stardust_capture_reward = 11;
	float attack_probability = 12;
	float dodge_probability = 13;
	float dodge_duration_s = 14;
	float dodge_distance = 15;
	float camera_distance = 16;
	float min_pokemon_action_frequency_s = 17;
	float max_pokemon_action_frequency_s = 18;
}

message PokemonGenderSettings {
	float male_percent = 1;
	float female_percent = 2;
	float genderless_percent = 3;
}

message StatsAttributes {
	int32 base_stamina = 1;
	int32 base_attack = 2;
	int32 base_defense = 3;
	int32 dodge_energy_delta = 8;
}

message CameraAttributes {
	float disk_radius_m = 1;
	float cylinder_radius_m = 2;
	float cylinder_height_m = 3;
	float cylinder_ground_m = 4;
	float shoulder_mode_scale = 5;
}

