syntax = "proto3";
package POGOProtos.Data.Combat;

import public "POGOProtos.Enums.proto";
import public "POGOProtos.Data.Player.proto";
import public "POGOProtos.Data.proto";

message Combat {
	enum CombatState {
		UNSET = 0;
		WAITING_FOR_PLAYERS = 1;
		READY = 2;
		ACTIVE = 3;
		SPECIAL_ATTACK = 4;
		WAITING_FOR_CHANGE_POKEMON = 5;
		FINISHED = 6;
		PLAYER_QUIT = 7;
		TIMEOUT = 8;
	}

	CombatState combat_state = 1;
	string combat_id = 2;
	.POGOProtos.Data.Combat.CombatPlayer player = 3;
	.POGOProtos.Data.Combat.CombatPlayer opponent = 4;
	int64 combat_start_ms = 5;
	int64 combat_end_ms = 6;
	int64 server_ms = 7;
	int32 current_turn = 8;
	int64 turn_start_ms = 9;
	int64 minigame_end_ms = 10;
	int64 minigame_submit_score_end_ms = 11;
	int64 change_pokemon_end_ms = 12;
	int64 quick_swap_cooldown_duration_ms = 13;
}
message PokemonCondition {
	.POGOProtos.Enums.ConditionType type = 1;
	.POGOProtos.Data.Combat.WithPokemonCpLimit with_pokemon_cp_limit = 2;
	.POGOProtos.Data.Combat.WithPokemonType with_pokemon_type = 3;
	.POGOProtos.Data.Combat.WithPokemonCategory with_pokemon_category = 4;
}

message WithPokemonType {
	repeated .POGOProtos.Enums.PokemonType pokemon_type = 1;
}

message WithPokemonCpLimit {
	int32 min_cp = 1;
	int32 max_cp = 2;
}

message WithPlayerLevel {
	int32 level = 1;
}

message PlayerCombatStats {
	message PlayerCombatBadgeStatsProto {
		int32 num_won = 1;
		int32 num_total = 2;
	}
}

message CombatAction {
	enum ActionType {
		UNSET = 0;
		ATTACK = 1;
		SPECIAL_ATTACK = 2;
		SPECIAL_ATTACK_2 = 3;
		MINIGAME_OFFENSIVE_FINISH = 4;
		MINIGAME_DEFENSIVE_START = 5;
		MINIGAME_DEFENSIVE_FINISH = 6;
		FAINT = 7;
		CHANGE_POKEMON = 8;
		QUICK_SWAP_POKEMON = 9;
	}

	ActionType type = 1;
	int32 action_start_turn = 3;
	int32 duration_turns = 5;
	int32 attacker_index = 6;
	int32 target_index = 7;
	fixed64 active_pokemon_id = 8;
	fixed64 target_pokemon_id = 14;
	float minigame_score = 15;
	int32 move = 16;
}

message UnlockCondition {
	.POGOProtos.Enums.ConditionType type = 1;
	int32 min_pokemon_count = 2;
	.POGOProtos.Data.Combat.WithPlayerLevel with_player_level = 3;
	.POGOProtos.Data.Combat.WithPokemonCpLimit with_pokemon_cp_limit = 4;
	.POGOProtos.Data.Combat.WithPokemonType with_pokemon_type = 5;
	.POGOProtos.Data.Combat.WithPokemonCategory with_pokemon_category = 6;
}

message CombatPlayerPreferences {
	bool friends_combat_opt_out = 1;
	bool nearby_combat_opt_in = 2;
}
message ChallengePlayer {
	string player_id = 1;
	.POGOProtos.Data.Player.PlayerAvatar player_avatar = 2;
	int64 combat_player_s2_cell_id = 3;
	repeated fixed64 attacking_pokemon_id = 4;
}

message WithPokemonCategory {
	string category_name = 1;
	repeated .POGOProtos.Enums.PokemonType pokemon_ids = 2;
}

message CombatChallenge {
	enum CombatChallengeState {
		UNSET = 0;
		CREATED = 1;
		OPENED = 2;
		CANCELLED = 3;
		ACCEPTED = 4;
		DECLINED = 5;
		READY = 6;
		TIMEOUT = 7;
	}

	string challenge_id = 1;
	.POGOProtos.Enums.CombatType type = 2;
	string combat_league_template_id = 3;
	.POGOProtos.Data.Combat.ChallengePlayer challenger = 5;
	.POGOProtos.Data.Combat.ChallengePlayer opponent = 6;
	CombatChallengeState state = 7;
	int64 created_timestamp_ms = 8;
	int64 expiration_timestamp_ms = 19;
	string combat_id = 10;
}

message CombatPlayer {
	.POGOProtos.Data.Player.PlayerPublicProfile public_profile = 1;
	.POGOProtos.Data.Combat.CombatPokemon active_pokemon = 2;
	repeated .POGOProtos.Data.Combat.CombatPokemon reserve_pokemon = 3;
	repeated .POGOProtos.Data.Combat.CombatPokemon fainted_pokemon = 4;
	.POGOProtos.Data.Combat.CombatAction current_action = 5;
	bool lockstep_ack = 6;
	int32 last_updated_turn = 7;
	.POGOProtos.Data.Combat.CombatAction minigame_action = 8;
	int64 quick_swap_available_ms = 9;
	int32 minigame_defense_chances_left = 10;
}

message CombatMoveBuffs {
	int32 attacker_attack_stat_stage_change = 1;
	int32 attacker_defense_stat_stage_change = 2;
	int32 target_attack_stat_stage_change = 3;
	int32 target_defense_stat_stage_change = 4;
}

message PokemonCombatStats {
	int32 num_won = 1;
	int32 num_total = 2;
}
message CombatPokemon {
	fixed64 pokemon_id = 1;
	int32 pokedex_id = 2;
	int32 cp = 3;
	float cp_multiplier = 4;
	int32 stamina = 5;
	int32 max_stamina = 6;
	int32 move1 = 7;
	int32 move2 = 8;
	int32 move3 = 9;
	int32 energy = 10;
	.POGOProtos.Data.PokemonDisplay pokemon_display = 11;
	int32 individual_attack = 12;
	int32 individual_defense = 13;
	int32 individual_stamina = 14;
	int32 attack_stat_stage = 15;
	int32 defense_stat_stage = 16;
	int32 battles_won = 17;
	int32 battles_lost = 18;
	string nickname = 19;
}

message CombatPlayerProfile {
	string player_id = 1;
	.POGOProtos.Data.Player.PlayerPublicProfile public_profile = 2;
	repeated string combat_league_template_id = 3;
	fixed64 buddy_pokemon_id = 4;
	.POGOProtos.Data.Location location = 5;
}

