syntax = "proto3";
package POGOProtos.Inventory;

import public "POGOProtos.Inventory.Item.proto";
import public "POGOProtos.Data.Avatar.proto";
import public "POGOProtos.Data.proto";
import public "POGOProtos.Data.Player.proto";
import public "POGOProtos.Data.Quests.proto";
import public "POGOProtos.Data.Gift.proto";
import public "POGOProtos.Data.Beluga.proto";
import public "POGOProtos.Enums.proto";
import public "POGOProtos.Data.Raid.proto";

message InventoryItemData {
	oneof Type {
		.POGOProtos.Data.PokemonData pokemon_data = 1;
		.POGOProtos.Inventory.Item.ItemData item = 2;
		.POGOProtos.Data.PokedexEntry pokedex_entry = 3;
		.POGOProtos.Data.Player.PlayerStats player_stats = 4;
		.POGOProtos.Data.Player.PlayerCurrency player_currency = 5;
		.POGOProtos.Data.Player.PlayerCamera player_camera = 6;
		.POGOProtos.Inventory.InventoryUpgrades inventory_upgrades = 7;
		.POGOProtos.Inventory.AppliedItems applied_items = 8;
		.POGOProtos.Inventory.EggIncubators egg_incubators = 9;
		.POGOProtos.Inventory.Candy candy = 10;
		.POGOProtos.Data.Quests.Quest quest = 11;
		.POGOProtos.Data.Avatar.AvatarItem avatar_item = 12;
		.POGOProtos.Inventory.RaidTickets raid_tickets = 13;
		.POGOProtos.Data.Quests.Quests quests = 14;
		.POGOProtos.Data.Gift.GiftBoxes gift_boxes = 15;
		.POGOProtos.Data.Beluga.BelugaIncenseBox beluga_incense = 16;
	}
}

message InventoryKey {
	oneof Type {
		fixed64 pokemon_id = 1;
		.POGOProtos.Inventory.Item.ItemId item = 2;
		int32 pokedex_entry_id = 3;
		bool player_stats = 4;
		bool player_currency = 5;
		bool player_camera = 6;
		bool inventory_upgrades = 7;
		bool applied_items = 8;
		bool egg_incubators = 9;
		.POGOProtos.Enums.PokemonFamilyId pokemon_family_id = 10;
		.POGOProtos.Enums.QuestType quest_type = 11;
		string avatar_template_id = 12;
		bool raid_tickets = 13;
		bool quests = 14;
		bool gift_boxes = 15;
		bool beluga_incense_box = 16;
	}
}

message InventoryUpgrades {
	repeated InventoryUpgrade inventory_upgrades = 1;
}

message InventoryUpgrade {
	.POGOProtos.Inventory.Item.ItemId item_id = 1;
	.POGOProtos.Inventory.InventoryUpgradeType upgrade_type = 2;
	int32 additional_storage = 3;
}

enum EggIncubatorType {
	INCUBATOR_UNSET = 0;
	INCUBATOR_DISTANCE = 1;
}

message InventoryDelta {
	int64 original_timestamp_ms = 1;
	int64 new_timestamp_ms = 2;
	repeated .POGOProtos.Inventory.InventoryItem inventory_items = 3;
}

message AppliedItems {
	repeated .POGOProtos.Inventory.AppliedItem item = 4;
}

message EggIncubator {
	string id = 1;
	.POGOProtos.Inventory.Item.ItemId item_id = 2;
	.POGOProtos.Inventory.EggIncubatorType incubator_type = 3;
	int32 uses_remaining = 4;
	uint64 pokemon_id = 5;  // TODO: Check if is PokemonType
	double start_km_walked = 6;
	double target_km_walked = 7;
}

message LootItem {
	oneof Type {
		.POGOProtos.Inventory.Item.ItemId item = 1;
		bool stardust = 2;
		bool pokecoin = 3;
		.POGOProtos.Enums.PokemonId pokemon_candy = 4;
		int32 count = 5;
		bool experience = 6;
		.POGOProtos.Data.PokemonData pokemon_egg = 7;
	}
}

message Candy {
	.POGOProtos.Enums.PokemonFamilyId family_id = 1;
	int32 candy = 2;
}

message InventoryItem {
	int64 modified_timestamp_ms = 1;

	oneof InventoryItem {
		DeletedItem deleted_item = 2;
		.POGOProtos.Inventory.InventoryItemData inventory_item_data = 3;
	}

	message DeletedItem {
		fixed64 pokemon_id = 1;
	}
}

message ExclusiveTicketInfo {
	int64 raid_seed = 1;
	string fort_id = 2;
	int64 start_time_ms = 4;
	int64 end_time_ms = 5;
	string image_url = 6;
	double latitude = 7;
	double longitude = 8;
	string gym_name = 9;
	int64 spawn_time_ms = 10;
	bool is_cancelled = 11;
	.POGOProtos.Data.PokemonData raid_pokemon = 12;
	.POGOProtos.Data.Raid.SharedExclusiveTicketTrainerInfo inviter = 13;
	.POGOProtos.Data.Raid.SharedExclusiveTicketTrainerInfo invitee = 14;
}

enum InventoryUpgradeType {
	UPGRADE_UNSET = 0;
	INCREASE_ITEM_STORAGE = 1;
	INCREASE_POKEMON_STORAGE = 2;
}

message RaidTickets {
	repeated .POGOProtos.Inventory.RaidTicket raid_ticket = 1;
}

message Loot {
	repeated .POGOProtos.Inventory.LootItem loot_item = 1;
}

message RaidTicket {
	string ticket_id = 1;
	.POGOProtos.Inventory.Item.ItemId item = 2;
	.POGOProtos.Inventory.ExclusiveTicketInfo exclusive_info = 4;
}

message AppliedItem {
	.POGOProtos.Inventory.Item.ItemId item_id = 1;
	.POGOProtos.Inventory.Item.ItemType item_type = 2;
	int64 expire_ms = 3;
	int64 applied_ms = 4;
}

message EggIncubators {
	repeated .POGOProtos.Inventory.EggIncubator egg_incubator = 1;
}

