syntax = "proto3";
package POGOProtos.Settings.Master.Item;

import public "POGOProtos.Enums.proto";
import public "POGOProtos.Inventory.proto";

message FortModifierAttributes {
	int32 modifier_lifetime_seconds = 1;
	int32 troy_disk_num_pokemon_spawned = 2;
}

message FoodAttributes {
	repeated .POGOProtos.Enums.ItemEffect item_effect = 1;
	repeated float item_effect_percent = 2;
	float growth_percent = 3;
	float berry_multiplier = 4;
	float remote_berry_multiplier = 5;
}

message EggIncubatorAttributes {
	.POGOProtos.Inventory.EggIncubatorType incubator_type = 1;
	int32 uses = 2;
	float distance_multiplier = 3;
}

message ExperienceBoostAttributes {
	float xp_multiplier = 1;
	int32 boost_duration_ms = 2;
}

message StardustBoostAttributes {
	float stardust_multiplier = 1;
	int32 boost_duration_ms = 2;
}

message InventoryUpgradeAttributes {
	int32 additional_storage = 1;
	.POGOProtos.Inventory.InventoryUpgradeType upgrade_type = 2;
}

message PotionAttributes {
	float sta_percent = 1;
	int32 sta_amount = 2;
}

message ReviveAttributes {
	float sta_percent = 1;
}

message PokeballAttributes {
	.POGOProtos.Enums.ItemEffect item_effect = 1;
	float capture_multi = 2;
	float capture_multi_effect = 3;
	float item_effect_mod = 4;
}

message IncenseAttributes {
	message IncensedPokemon {
		.POGOProtos.Enums.PokemonId pokemon_id = 1;
		float weight = 2;
	}

	int32 incense_lifetime_seconds = 1;
	repeated .POGOProtos.Enums.PokemonType pokemon_type = 2;
	float pokemon_incense_type_probability = 3;
	int32 standing_time_between_encounters_seconds = 4;
	int32 moving_time_between_encounter_seconds = 5;
	int32 distance_required_for_shorter_interval_meters = 6;
	int32 pokemon_attracted_length_sec = 7;
	repeated IncensedPokemon spawn_table = 8;
	float spawn_table_probability = 9;
}

message BattleAttributes {
	float sta_percent = 1;
	float atk_percent = 2;
	float def_percent = 3;
	float duration_s = 4;
}

